# dothask

./: .dockerignore  .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  Dockerfile  README.md  dot.config.yaml  dothask.cabal  example.config.yaml  package.yaml  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
src/: Config.hs  Dothask.hs
src/Dothask/: Config.hs
test/: Spec.hs
