cabal-version:       2.4
name:                dothask
version:             0.0.0.0
synopsis:            Dotfile setup automation written in Haskell
description:         Dotfile setup automation written in Haskell
homepage:            https://github.com/bee/dothask
bug-reports:         https://github.com/bee/dothask/issues
license:             MIT
license-file:        LICENSE
author:              Bee Ellis
maintainer:          Bee Ellis <pizzaman8099@gmail.com>
copyright:           2020 Bee Ellis
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/bee/dothask.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , yaml
                     , text
                     , turtle
                     , unordered-containers
                     , optparse-applicative

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Dothask

executable dothask
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       dothask
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite dothask-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       dothask
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
